--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
             text-align: center;
             font-family: Arial, sans-serif;
         }
-        #imageContainer {
+        #optionsContainer {
             display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
+            flex-direction: column; /* 使选项竖直排列 */
+            align-items: center;
             gap: 20px;
             margin-top: 20px;
         }
-        .imageOption {
-            width: 150px;
-            height: 150px;
+        .option {
             background-color: #444;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            color: white;
+            padding: 15px;
+            font-size: 18px;
             cursor: pointer;
             border-radius: 10px;
+            width: 80%;
+            text-align: center;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
         #scaryImage {
@@ -43,16 +43,6 @@
             0% { opacity: 0; transform: scale(0.5); }
             100% { opacity: 1; transform: scale(1); }
         }
-        #scaryButton {
-            background-color: orange;
-            color: black;
-            padding: 15px;
-            font-size: 20px;
-            cursor: pointer;
-            border: none;
-            margin-top: 20px;
-            border-radius: 10px;
-        }
         #backButton {
             background-color: #444;
             color: white;
@@ -67,41 +57,45 @@
 <body>
 
     <h1>万圣节惊悚时刻！</h1>
-    <div id="imageContainer">
-        <!-- 五个图片选项 -->
-        <div class="imageOption" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135523.jpg')">
-            <img src="https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135523.jpg" alt="Image 1" width="100" height="100">
+    
+    <!-- 选项列表 -->
+    <div id="optionsContainer">
+        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135523.jpg')">
+            万圣节快乐
         </div>
-        <div class="imageOption" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135534.jpg')">
-            <img src="https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135534.jpg" alt="Image 2" width="100" height="100">
+        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135534.jpg')">
+            恐怖的夜晚
         </div>
-        <div class="imageOption" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135544.jpg')">
-            <img src="https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135544.jpg" alt="Image 3" width="100" height="100">
+        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135544.jpg')">
+            鬼魂来袭
         </div>
-        <div class="imageOption" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135608.jpg')">
-            <img src="https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135608.jpg" alt="Image 4" width="100" height="100">
+        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135608.jpg')">
+            惊悚一刻
         </div>
-        <div class="imageOption" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135618.jpg')">
-            <img src="https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135618.jpg" alt="Image 5" width="100" height="100">
+        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135618.jpg')">
+            恐怖的面孔
         </div>
     </div>
 
+    <!-- 显示图片的区域 -->
     <img id="scaryImage" alt="Scary Image">
+    
+    <!-- 返回按钮 -->
     <button id="backButton" onclick="goBack()">返回</button>
 
     <script>
-        // 显示图片
+        // 显示图片的函数
         function showImage(imageUrl) {
             var imgElement = document.getElementById('scaryImage');
             imgElement.src = imageUrl;
-            imgElement.style.display = 'block';
+            imgElement.style.display = 'block';  // 显示图片
             document.getElementById('backButton').style.display = 'block';  // 显示返回按钮
         }
 
         // 返回按钮操作
         function goBack() {
             var imgElement = document.getElementById('scaryImage');
-            imgElement.style.display = 'none';
+            imgElement.style.display = 'none';  // 隐藏图片
             document.getElementById('backButton').style.display = 'none';  // 隐藏返回按钮
         }
     </script>
