--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         #optionsContainer {
             display: flex;
-            flex-direction: column; /* 使选项竖直排列 */
+            flex-direction: column; /* 竖直排列 */
             align-items: center;
             gap: 20px;
             margin-top: 20px;
@@ -60,19 +60,19 @@
     
     <!-- 选项列表 -->
     <div id="optionsContainer">
-        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135523.jpg')">
+        <div class="option" onclick="showImage('https://i.ibb.co/rKh2CHsT/IMG-20251031-135523.jpg')">
             万圣节快乐
         </div>
-        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135534.jpg')">
+        <div class="option" onclick="showImage('https://i.ibb.co/3mRHSGpJ/IMG-20251031-135534.jpg')">
             恐怖的夜晚
         </div>
-        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135544.jpg')">
+        <div class="option" onclick="showImage('https://i.ibb.co/9mWT4V9C/IMG-20251031-135544.jpg')">
             鬼魂来袭
         </div>
-        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135608.jpg')">
+        <div class="option" onclick="showImage('https://i.ibb.co/wN0TW87f/IMG-20251031-135608.jpg')">
             惊悚一刻
         </div>
-        <div class="option" onclick="showImage('https://github.com/gougoubei/halloween/raw/542256a6e045b258b8646e86032d38251d1e6d47/IMG_20251031_135618.jpg')">
+        <div class="option" onclick="showImage('https://i.ibb.co/G4HyzYNF/IMG-20251031-135618.jpg')">
             恐怖的面孔
         </div>
     </div>
