--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             color: white;
             text-align: center;
             font-family: Arial, sans-serif;
+            padding: 0;
+            margin: 0;
         }
         #optionsContainer {
             display: flex;
@@ -35,7 +37,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 80%;
+            max-width: 90%; /* 最大宽度为90% */
+            max-height: 80%; /* 最大高度为80% */
             z-index: 1000;
             animation: scare 0.5s ease-in-out;
         }
@@ -51,6 +54,11 @@
             border-radius: 10px;
             cursor: pointer;
             display: none;
+            position: fixed;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 2000;
         }
     </style>
 </head>
