--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            max-width: 95%; /* 最大宽度为95% */
-            max-height: 80%; /* 最大高度为80% */
+            max-width: 120%; /* 放大图片宽度 */
+            max-height: 100%; /* 放大图片高度 */
             z-index: 1000;
             animation: showImage 0.5s ease-out; /* 调整动画，使用ease-out更平滑 */
         }
