--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>万圣节祝福</title>
+    <title>万圣节祝福1</title>
     <style>
         body {
             background-color: #2a2a2a;
@@ -37,14 +37,14 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            max-width: 120%; /* 放大图片宽度 */
-            max-height: 100%; /* 放大图片高度 */
+            max-width: 150%; /* 放大图片宽度 */
+            max-height: 150%; /* 放大图片高度 */
             z-index: 1000;
-            animation: showImage 0.5s ease-out; /* 调整动画，使用ease-out更平滑 */
+            animation: showImage 0.2s ease-out; /* 调整动画，使用ease-out更平滑 */
         }
         @keyframes showImage {
             0% { opacity: 0; transform: translate(-50%, -50%) scale(0.3); } /* 初始状态，图片从中央缩小 */
-            100% { opacity: 1; transform: translate(-50%, -50%) scale(1); } /* 结束状态，图片恢复正常大小 */
+            100% { opacity: 1; transform: translate(-50%, -50%) scale(0.5); } /* 结束状态，图片恢复正常大小 */
         }
         #backButton {
             background-color: #444;
